spring config files removed from main resources folder.. moved to test resources.